[tool.poetry]
name = "anue-news"
version = "0.1.0"
description = ""
authors = ["willseed <willseed@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
